--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ dependencies {
 	compile("org.hawklithm.netty:nettyService:1.0-SNAPSHOT")
 	compile("hessian:hessian:3.0.1")
 	compile("org.apache.zookeeper:zookeeper:3.4.6")
-	compile("com.h2database:h2")
 	compile("com.google.code.gson:gson:2.2.4")
+	compile("org.hawklithm.h2db:H2dbBuffer:1.0-SNAPSHOT")
     testCompile("junit:junit")
 }
 
